?? ??? 2014, PHP 5.5.20

- PDO_pgsql:
  . Fixed bug #66584 (Segmentation fault on statement deallocation) (Matteo)
  . Fixed bug #67462 (PDO_PGSQL::beginTransaction() wrongly throws exception
    when not in transaction) (Matteo)
  . Fixed bug #68351 (PDO::PARAM_BOOL and ATTR_EMULATE_PREPARES misbehaving)
    (Matteo)

13 Nov 2014, PHP 5.5.19

- Core:
  . Fixed bug #68095 (AddressSanitizer reports a heap buffer overflow in 
    php_getopt()). (Stas)
  . Fixed bug #68118 ($a->foo .= 'test'; can leave $a->foo undefined). (Nikita)
  . Fixed bug #68129 (parse_url() - incomplete support for empty usernames
    and passwords) (Tjerk)

- Fileinfo:
  . Fixed bug #66242 (libmagic: don't assume char is signed). (ArdB)
  . Fixed bug #68283 (fileinfo: out-of-bounds read in elf note headers).
    (CVE-2014-3710) (Remi)

- FPM:
  . Implemented FR #55508 (listen and listen.allowed_clients should take IPv6
    addresses). (Robin Gloster)

- GD:
  . Fixed bug #65171 (imagescale() fails without height param). (Remi)

- GMP:
  . Fixed bug #63595 (GMP memory management conflicts with other libraries
    using GMP). (Remi)

- Mysqli:
  . Fixed bug #68114 (linker error on some OS X machines with fixed width
    decimal support) (Keyur Govande)

- ODBC:
  . Fixed bug #68087 (ODBC not correctly reading DATE column when preceded by
    a VARCHAR column) (Keyur Govande)

- SPL:
  . Fixed bug #68128 (Regression in RecursiveRegexIterator) (Tjerk)

- CURL:
  . Add CURL_SSLVERSION_TLSv1_0, CURL_SSLVERSION_TLSv1_1, and 
    CURL_SSLVERSION_TLSv1_2 constants if supported by libcurl (Rasmus)

16 Oct 2014, PHP 5.5.18

- Core:
  . Fixed bug #67985 (Incorrect last used array index copied to new array after
    unset). (Tjerk)
  . Fixed bug #67739 (Windows 8.1/Server 2012 R2 OS build number reported
    as 6.2 (instead of 6.3)). (Christian Wenz)
  . Fixed bug #67633 (A foreach on an array returned from a function not doing
    copy-on-write). (Nikita)